--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,7 +25,14 @@ steps:
 - script: echo Hello, world!
   displayName: 'Run a one-line script'
 
+steps:
 - script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+    echo Starting the build
+    mvn package
+  displayName: 'Build with Maven'
+  
+  steps:
+- task: ShellScript@2
+  inputs:
+    scriptPath: 'build.sh'
+    
