--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,19 +20,11 @@ steps:
     publishJUnitResults: false
     testResultsFiles: '**/TEST-*.xml'
     goals: 'package'
-
-steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
-
-steps:
-- script: |
+ - script:
     echo Starting the build
     mvn package
   displayName: 'Build with Maven'
+
   
-steps:
-- task: ShellScript@2
-  inputs:
-    scriptPath: 'build.sh'
+
     
