--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,7 +20,7 @@ steps:
     publishJUnitResults: false
     testResultsFiles: '**/TEST-*.xml'
     goals: 'package'
- - script:
+ - script: |
     echo Starting the build
     mvn package
   displayName: 'Build with Maven'
